update style colour

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   --mainWhite: rgb(236, 238, 238);
   --mainBlack: rgb(14, 13, 13);
   --mainGrey: #34c2db;
-  --mainRed: #dd3910;
+  --mainRed: #f30000;
   --mainGreen: #e96812;
 }
 * {
